fixed squished search bar when opened

--- a/src/shell/components/ContentSearch/styles.less
+++ b/src/shell/components/ContentSearch/styles.less
@@ -18,7 +18,9 @@
   position: absolute;
   z-index: 110;
   max-height: 700px;
-  min-width: 850px;
+  // min-width: 850px;
+  display: inline-block;
+  min-width: max-content;
   list-style: none;
   overflow: auto;
   box-shadow: 1px 1px 18px #0000007a;
@@ -66,14 +68,12 @@
       background-color: @white;
       display: flex;
       .SortBy {
-        flex: 2;
         margin-bottom: 16px;
         button {
           margin-right: 8px;
         }
       }
       .FilterBy {
-        flex: 1;
         display: flex;
         flex-direction: column;
         input {
